@@ -1,6 +1,6 @@
 % File src/library/grDevices/man/convertColor.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2011 R Core Team
+% Copyright 1995-2013 R Core Team
 % Distributed under GPL 2 or later
 
 \name{convertColor}
@@ -8,14 +8,15 @@
 \alias{colorspaces}
 \title{Convert between Colour Spaces}
 \description{
-  Convert colours between their representations in standard colour spaces.
+  Convert opaque colours between their representations in standard
+  colour spaces.
 }
 \usage{
 convertColor(color, from, to, from.ref.white, to.ref.white,
              scale.in = 1, scale.out = 1, clip = TRUE)
 }
 \arguments{
-  \item{color}{A matrix whose rows specify colors. }
+  \item{color}{A matrix whose rows specify opague colors.}
   \item{from, to}{Input and output color spaces.  See \sQuote{Details} below.}
   \item{from.ref.white, to.ref.white}{Reference whites or \code{NULL}
     if these are built in to the definition, as for RGB
