@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2013-07-23 r63381) -- "Unsuffered Consequences"
+R Under development (unstable) (2013-07-24 r63400) -- "Unsuffered Consequences"
 Copyright (C) 2013 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -1516,11 +1516,10 @@ List of 150
 [5,]   0.00 255.00    0
 > colorRampPalette(c("blue", "red"))( 4 ) ## (n)
 [1] "#0000FF" "#5500AA" "#AA0055" "#FF0000"
-> ## Don't show: 
-> ## special case, invalid in R <= 2.15.0:
-> bb <- colorRampPalette(2)(4)
-> stopifnot(bb[1] == bb)
-> ## End Don't show
+> ## a ramp in opacity of blue values
+> colorRampPalette(c(rgb(0,0,1,1), rgb(0,0,1,0)), alpha=TRUE)(6)
+[1] "#0000FFFF" "#0000FFCC" "#0000FF99" "#0000FF65" "#0000FF32" "#0000FF00"
+> 
 > require(graphics)
 > 
 > ## Here space="rgb" gives palettes that vary only in saturation,
